Fixed overlay bug in showcase on small screens

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,10 +32,6 @@
     padding: 0.5rem;
   }
 
-  #showcase .showcase-content {
-    top: 110px;
-  }
-
   #who {
     display: block;
   }
@@ -63,11 +59,6 @@
 }
 
 @media(max-height: 568px) {
-  #showcase .showcase-content {
-    margin-top: -2rem;
-    top: 140px;
-  }
-
   .l-heading {
     font-size: 3rem;
   }
