--- a/css/style.css
+++ b/css/style.css
@@ -134,26 +134,33 @@ p {
 
 /* Showcase */
 #showcase {
-  /* background: #333 url('../img/showcase.jpg') no-repeat center center/cover; */
   background: #333 url('../img/Cityscape\ Financial\ District.jpg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
+  position: relative;
 }
 
 #showcase .showcase-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: auto;
   padding: 0 2rem;
-  /* Overlay */
+}
+
+#overlay {
   position: absolute;
-  top: 65px;
+  top: 0px;
+  top: 0;
   left:0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0,0,0,0.4);
 }
 
